--- a/src/editor.html
+++ b/src/editor.html
@@ -59,6 +59,10 @@
       </div>
 
       <div class="chart-parameter-container bar">
+        <br><label for="textboxBarChartTitle">Chart Title</label><input id="textboxBarChartTitle" type="text">
+        <br><label for="textboxBarChartXLabel">X Label</label><input id="textboxBarChartXLabel" type="text">
+        <br><label for="textboxBarChartYLabel">Y Label</label><input id="textboxBarChartYLabel" type="text">
+        <br><textarea id="textareaBarChartData"></textarea>
       </div>
 
       <div class="chart-parameter-container pie">
@@ -92,6 +96,12 @@ window.onload = () => {
       yLabel: document.querySelector("#textboxTimeSeriesChartYLabel"),
       intervalUnits: Array.from(document.querySelectorAll("input[name='radioTimeSeriesChartIntervalUnit']")),
       data: document.querySelector("#textareaTimeSeriesChartData"),
+    },
+    bar: {
+      title: document.querySelector("#textboxBarChartTitle"),
+      xLabel: document.querySelector("#textboxBarChartXLabel"),
+      yLabel: document.querySelector("#textboxBarChartYLabel"),
+      data: document.querySelector("#textareaBarChartData"),
     },
   }
 
@@ -161,6 +171,30 @@ window.onload = () => {
                 xInterval: {
                   unit: intervalUnit,
                 },
+              }
+            }
+          }
+          break
+
+        case "bar":
+          {
+            const rows = chartParams.bar.data.value.split("\n").filter(line => line.trim() !== "").map(line => line.split(","))
+            const data = {}
+            for (let j = 0; j < rows[0].length; j++) {
+              data[rows[0][j]] = rows.slice(1).map(row => row[j])
+            }
+            const x = data.x.map(v => Number.isNaN(Number(v)) ? v : parseFloat(v))
+            const y = Object.entries(data)
+              .filter(([label, data]) => label !== "x")
+              .map(([label, data]) => ({label, data: data.map(v => parseFloat(v))}))
+
+            src = {
+              bar: {
+                title: chartParams.bar.title.value,
+                xLabel: chartParams.bar.xLabel.value,
+                yLabel: chartParams.bar.yLabel.value,
+                x: x,
+                y: y,
               }
             }
           }
