--- a/src/editor.html
+++ b/src/editor.html
@@ -16,6 +16,16 @@
           max-width: 600px;
           margin: auto;
       }
+
+      #textUrl {
+          white-space: nowrap;
+          overflow-x: scroll;
+      }      
+
+      textarea {
+          width: 100%;
+          height: 20rem;
+      }
     </style>
   </head>
   <body>
